// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PinDialog /> > entering a PIN to unlock the Vault > renders consistently 1`] = `
<DocumentFragment>
  <ion-header>
    <!---->
    <ion-toolbar>
      <ion-title>
        Unlock
      </ion-title>
      <ion-buttons
        slot="primary"
      >
        <ion-button
          data-testid="cancel-button"
        >
          <ion-icon
            icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><path d='M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z'/></svg>"
            slot="icon-only"
          />
        </ion-button>
      </ion-buttons>
    </ion-toolbar>
  </ion-header>
  <ion-content
    class="pin-dialog-content ion-padding ion-text-center"
  >
    <ion-label>
      <div
        class="prompt"
      >
        Enter PIN to Unlock
      </div>
    </ion-label>
    <ion-label
      data-testid="display-pin"
    >
      <div
        class="pin"
      />
    </ion-label>
    <ion-label
      color="danger"
    >
      <div
        class="error"
      />
    </ion-label>
  </ion-content>
  <ion-footer
    class="pin-dialog-footer"
  >
    <!---->
    <ion-grid>
      <ion-row>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            1
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            2
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            3
          </ion-button>
        </ion-col>
      </ion-row>
      <ion-row>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            4
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            5
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            6
          </ion-button>
        </ion-col>
      </ion-row>
      <ion-row>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            7
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            8
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            9
          </ion-button>
        </ion-col>
      </ion-row>
      <ion-row>
        <ion-col>
          <ion-button
            color="tertiary"
            disabled="true"
            expand="block"
          >
            Delete
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
          >
            0
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            color="secondary"
            disabled="true"
            expand="block"
          >
            Enter
          </ion-button>
        </ion-col>
      </ion-row>
    </ion-grid>
  </ion-footer>
</DocumentFragment>
`;

exports[`<PinDialog /> > entering a new PIN > renders consistently 1`] = `
<DocumentFragment>
  <ion-header>
    <!---->
    <ion-toolbar>
      <ion-title>
        Create PIN
      </ion-title>
    </ion-toolbar>
  </ion-header>
  <ion-content
    class="pin-dialog-content ion-padding ion-text-center"
  >
    <ion-label>
      <div
        class="prompt"
      >
        Create Session PIN
      </div>
    </ion-label>
    <ion-label
      data-testid="display-pin"
    >
      <div
        class="pin"
      />
    </ion-label>
    <ion-label
      color="danger"
    >
      <div
        class="error"
      />
    </ion-label>
  </ion-content>
  <ion-footer
    class="pin-dialog-footer"
  >
    <!---->
    <ion-grid>
      <ion-row>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            1
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            2
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            3
          </ion-button>
        </ion-col>
      </ion-row>
      <ion-row>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            4
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            5
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            6
          </ion-button>
        </ion-col>
      </ion-row>
      <ion-row>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            7
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            8
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
            fill="outline"
          >
            9
          </ion-button>
        </ion-col>
      </ion-row>
      <ion-row>
        <ion-col>
          <ion-button
            color="tertiary"
            disabled="true"
            expand="block"
          >
            Delete
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            disabled="false"
            expand="block"
          >
            0
          </ion-button>
        </ion-col>
        <ion-col>
          <ion-button
            color="secondary"
            disabled="true"
            expand="block"
          >
            Enter
          </ion-button>
        </ion-col>
      </ion-row>
    </ion-grid>
  </ion-footer>
</DocumentFragment>
`;
